# Tulpar

./:  .gitignore  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAKEFILE  README.md  README_kk.md  README_ru.md  Structure  __main__.py  flake.nix  meson.build  misc.py  process.py  result  setup.py  shell.nix  test.py  tpar  tulpar  tulpar.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
TestAPG/: md5sums  metadata.json
apginstall/: main.cpp  meson.build
apginstall/src/: main.cpp
apglist/: meson.build
apglist/src/: main.cpp
apgremove/: meson.build
apgremove/src/: main.cpp
include/: config.h  mirror.hpp  parse_json.hpp  tulpar.h
libapg/: libapg.c  libapg.pc  meson.build
libapg/include/Apg/: ApgArchiver.hpp  ApgLmdbDb.hpp  ApgPackage.hpp  Logger.hpp  Md5Hash.hpp
libapg/include/apg/: ApgArchiver.hpp  ApgLmdbDb.hpp  ApgPackage.hpp  package.h
libapg/include/apg_package/: ApgLmdbDb.hpp  ApgPackage.hpp
libapg/src/: ApgArchiver.cpp  ApgLmdbDb.cpp  ApgPackage.cpp  Lib.cpp  Logger.cpp  Md5Hash.cpp  package.c
service/: tulpar.service  tulpard.c
src/: .main.cpp.kate-swp  Tulpar.files  Tulpar.java  cli.c  colors.hpp  config.cpp  main.cpp  main.cpp.orig  meson.build  mirror.cpp  parse_json.cpp  tests.sh  tulpar  tulpar.c  tulpar_cpp.cpp  utils.cpp  utils.hpp
src/.cache/clangd/index/: main.cpp.A883D9BF7238D5D8.idx  parse_json.cpp.9B6730B658F918F3.idx  parse_json.hpp.10CB833D8F18CEC5.idx  tarxx.h.D98DE5DF8B0BD961.idx  utils.cpp.5A8F851B60AC5901.idx  utils.hpp.873E56DE4C89AFF4.idx
src/.kdev4/: src.kdev4
src/.qtc_clangd/: compile_commands.json
src/.qtc_clangd/.cache/clangd/index/: Tulpar.config.B760F5DD46CCB693.idx  abi_macros.hpp.3649F89464DABFD4.idx  adl_serializer.hpp.01ACAF03C165BE92.idx  allocated_ptr.h.70410E8C62EC6C3B.idx  any.48A87E8EDDA43526.idx  argparse.hpp.2BD804BE7BDA632A.idx  array.2B0F72C0ACC52B1B.idx  assert.h.9895EEC17E1D2A2B.idx  atomic_base.h.5CAE7DD0D5FEA870.idx  auto_ptr.h.F72E6F8ABA6777B5.idx  begin.hpp.8356B6CF4DE4417F.idx  bessel_function.tcc.F2CCB1901AC2BAAE.idx  beta_function.tcc.EDAA91939666D6F8.idx  binary_reader.hpp.80628C0280391596.idx  binary_writer.hpp.3AD3BCC8B37677AB.idx  bitset.34DB6F68526FE798.idx  byte_container_with_subtype.hpp.0E2CAFEC3A588A29.idx  charconv.016B2794A7FC6E9B.idx  chrono.h.FA23AAA3A8BA2411.idx  cmath.7F94A5DC886C08DF.idx  colors.hpp.4CB8387FFCA4662F.idx  cpp_future.hpp.33A67D6CA9CF0B5D.idx  cpp_type_traits.h.FAB6676B3F7EBD5F.idx  cstddef.C90E39AFC31D658E.idx  cstring.9430A98F242A1A88.idx  detected.hpp.B09F610E88E08A17.idx  ell_integral.tcc.133F835CD79F336E.idx  end.hpp.3EA7C6C58D53462A.idx  erase_if.h.C70B56BAE300760C.idx  exceptions.hpp.7656AC38EF420F46.idx  exp_integral.tcc.AC5BA0141D2C0DD6.idx  forward_list.h.2FA260DE45D984CF.idx  forward_list.tcc.3865BBB0102D0451.idx  from_json.hpp.1AFF851E6AF3BB10.idx  fs_path.h.90575D6FA6D5DDC0.idx  fstream.40F6070E6A89586D.idx  fstream.tcc.17E6BCF6AAC5EB04.idx  ftw.h.FDECEB3FC0A17DC8.idx  functional.EF55750FEAD838CA.idx  functional_hash.h.155E7DCEBAD33A0E.idx  (+105 more)
src/md5sumcheck/: md5sumcheck.hpp
src/parse_json/: parse_json.cpp  parse_json.cpp.orig  parse_json.hpp  parse_json.hpp.orig
src/rootfs/usr/include/bash/: pathnames.h
src/rootfs/usr/lib/bash/: Makefile.inc  Makefile.sample  accept  basename  csv  cut  dirname  dsv  fdflags  finfo  getconf  head  id  ln  logname  mkdir  mkfifo  mktemp  mypid  pathchk  print  printenv  push  realpath  rm  rmdir  seq  setpgid  sleep  stat  strftime  sync  tee  truefalse  tty  uname  unlink  whoami
src/rootfs/usr/lib/pkgconfig/: bash.pc
src/rootfs/usr/share/info/: dir
src/tests/: test.clean.sh  test.local_package.sh
src/utils/: utils.cpp  utils.cpp.orig  utils.hpp  utils.hpp.orig
tulpar/: commands.py  main.py  package_manager.py
